--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.0.2",
+    "@mui/x-date-pickers": "^7.28.3",
     "@testing-library/dom": "^10.4.0",
+    "bootstrap-datepicker": "^1.10.0",
+    "dayjs": "^1.11.13",
     "geckodriver": "^5.0.0",
+    "jquery": "^3.7.1",
     "react": "^18.3.1",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.3.0",
